@@ -1,6 +1,7 @@
 ???? - 4.2.2:
 
 Fixed false positive in UnusedImports: javadoc comments are parsed to check @see and other tags
+Fixed parsing bug: constant fields in annotation classes
 
 April 11, 2008 - 4.2.1:
 
